@@ -1,3 +1,9 @@
+2005-05-24  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* SelfUpdate.pm: changed CVS to only check out $distribution
+	(or whatever is set in SelfUpdateCVSTrees in fink.conf) rather
+	than everything under dists.
+
 2005-05-24  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
 	* Package.pm: Don't leave .lock files around.
