@@ -1,3 +1,7 @@
+2005-05-24  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* fink.conf.5.in: added SelfUpdateCVSTrees doc
+
 2005-05-23  Daniel Macks  <dmacks@netspace.org>
 
 	* bootstrap.pl: Suggest the bash shell setups instead of csh.
